# Veiled_Court

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES.md  DEV_MODE.md  DOCKER_DEPLOYMENT.md  DOWNLOAD_MODELS.md  Dockerfile  Dockerfile.dev  FRONTEND_TEST.md  IMPLEMENTATION_STATUS.md  QUICKSTART_DEPLOY.md  README.md  SETUP.md  build-frontend.sh  docker-compose.yml  run
assets/katago/: DOWNLOAD_HERE.txt
configs/: crane.cfg  crow.cfg  dragon.cfg  eagle.cfg  jaguar.cfg  lion.cfg  mantis_shrimp.cfg  praying_mantis.cfg  spider.cfg
configs-dev/: crane.cfg  crow.cfg  dragon.cfg  eagle.cfg  jaguar.cfg  lion.cfg  mantis_shrimp.cfg  praying_mantis.cfg  spider.cfg
docs/: IMPLEMENTATION_START.md  architecture.md  implementation_plan.md  intro.md  model_setup.md  reusable_components_analysis.md  roster.md  theming.md  visual_direction.md
frontend/: game.html
frontend/css/: board.css  themes.css
frontend/js/: board.js  game.js  selection.js  theme.js  websocket.js
nets/: .gitkeep
scripts/: README.md  deploy_server.sh  download_nets.sh  install-katago.sh  mock_katago.sh  run-dev.sh  run_dev.sh  run_prod.sh  setup-dev-mode.sh  test-spirit.sh  update-config-paths.sh
src/: main.rs  state.rs  ws.rs
src/game/: mod.rs  types.rs
src/katago/: crow.rs  jaguar.rs  mod.rs
src/spirits/: mod.rs
